--- a/application/modules/game/views/scripts/index/dashboard.phtml
+++ b/application/modules/game/views/scripts/index/dashboard.phtml
@@ -16,13 +16,13 @@
             </div>
             <div class="panel-body">
                 <p>Hier kannst du verschiedene Random Events auslösen. Das ist sehr experimentiell und auf eigene Gefahr auszutesten! Deine Spieler könnten dabei zu schaden kommen!</p>
-                <a class="btn btn-success random"><i class="icon-random"></i> Random Event</a>
+                <a class="btn btn-success random"><i class="fa fa-random"></i> Random Event</a>
             </div>
         </div>
         <div class="panel panel-default clearfix">
             <div class="panel-heading">
                 <a href="<?php echo $this->url(array('controller'=>'team','action'=>'index')); ?>" class="btn btn-primary btn-small pull-right">
-                    <i class="icon-plus-sign"></i> Add Friends to Team!</a>
+                    <i class="fa fa-plus-sign"></i> Add Friends to Team!</a>
                 <h3 class="panel-title">Roster</h3>
             </div>
             <div class="panel-body">
