--- a/application/modules/game/views/scripts/match/index.phtml
+++ b/application/modules/game/views/scripts/match/index.phtml
@@ -2,7 +2,7 @@
     <div class="col-lg-6">
         <div class="row">
             <a class="pull-right btn btn-danger btn-small" id="actionButton" href="<?php echo $this->url(array('reset'=>1)); ?>">
-                <i class="icon-refresh"></i> Reset Match
+                <i class="fa fa-refresh"></i> Reset Match
             </a>
             <div class="col-lg-6">
                 <div class="controls" id="matchControls">
