--- a/application/views/_stats.phtml
+++ b/application/views/_stats.phtml
@@ -3,7 +3,7 @@
         <h5><?php echo $type; ?></h5>
         <?php foreach($stats as $stat){ ?>
             <div>
-                <i class="icon-<?php echo strtolower($stat['name']); ?>"></i>
+                <i class="fa fa-<?php echo strtolower($stat['name']); ?>"></i>
                 <label><?php echo $stat['name']; ?></label>
                 <div class="progress">
                     <div class="progress-bar progress-bar-<?php if($stat['points']<30){echo "danger";}elseif($stat['points']<70){echo "warning";}else{echo "success";} ?>" style="width: <?php echo $stat['points']; ?>%;"></div>
