--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,7 +1,6 @@
 $icon-font-path: "/bower_components/sass-bootstrap/fonts/";
 @import "compass/css3";
 
-@import 'sass-bootstrap/lib/bootstrap';
 @import 'components-font-awesome/scss/font-awesome';
 
 @import '_mixins';
@@ -12,6 +11,8 @@ $icon-font-path: "/bower_components/sass-bootstrap/fonts/";
 
 @import '_game';
 @import '_match';
+@import '_pitch';
+@import '_formation';
 @import '_ranking';
 @import '_roster';
 @import '_skillgame';
