--- a/application/modules/user/views/scripts/index/index.phtml
+++ b/application/modules/user/views/scripts/index/index.phtml
@@ -1,14 +1,14 @@
 <div class="controls">
     <a class="btn btn-large modalTrigger" href="<?php echo $this->url(array('action'=>'add')); ?>">
-        <i class="icon-plus-sign"></i> Add new entry
+        <i class="fa fa-plus-sign"></i> Add new entry
     </a>
 </div>
 <p>
     <?php if($this->active){
-        ?><a href="<?php echo $this->url(array('active'=>0)); ?>" class="btn"><i class="icon-lock"></i>
+        ?><a href="<?php echo $this->url(array('active'=>0)); ?>" class="btn"><i class="fa fa-lock"></i>
         gesperrte anzeigen</a><?
     }else{
-        ?><a href="<?php echo $this->url(array('active'=>1)); ?>" class="btn"><i class="icon-unlock"></i>
+        ?><a href="<?php echo $this->url(array('active'=>1)); ?>" class="btn"><i class="fa fa-unlock"></i>
         aktive anzeigen</a><?
     }
     ?>
