Major refactoring of design, added Formation integration

--- a/app/include/navigation.html
+++ b/app/include/navigation.html
@@ -1,23 +1,8 @@
-<!-- Header -->
-<div class="navbar-header">
-    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-    </button>
-    <a class="navbar-brand" href="#">RACERFISH</a>
+<div class="navbar navbar-inverse navbar-fixed-top bs-docs-nav">
+    <div>
+        <a href="#" class="navbar-brand">Fussball mit Freunden</a>
+        <ul class="nav navbar-nav">
+            <li><a class="active" href=#"><i class="fa fa-circle"></i> Zentrale</a></li><li class="dropdown"><a class="active dropdown-toggle" data-toggle="dropdown" href="#"><i class="fa fa-male"></i> Team</a><ul class="dropdown-menu" role="menu" aria-labelledby="dLabel"><li><a href="#"><i class="fa fa-facebook-sign"></i> Add Players</a></li></ul></li><li><a class="active" href="#"><i class="fa fa-gamepad"></i> Challenge</a></li>                <li><a href="#"><i class="fa fa-off"></i> Logout</a></li>
+        </ul>
+    </div>
 </div>
-<nav class="collapse navbar-collapse">
-    <ul class="nav navbar-nav">
-        <li>
-        	<a href="../index.html">Social</a>
-        </li>
-        <li>
-            <a href="../index.html">Design</a>
-        </li>
-        <li>
-            <a href="../index.html">Web</a>
-        </li>
-    </ul>
-</nav><!--/.nav-collapse -->
-<!-- End Header -->
