--- a/application/modules/default/views/scripts/_head.phtml
+++ b/application/modules/default/views/scripts/_head.phtml
@@ -1,157 +1,2 @@
-<?php if($this->preview){ ?>
-    <!-- --------------------------------------------------------------------------------------------- -->
-    <!-- JAVASCRIPT ------------------------------------------------------------------------------------- -->
-    <!-- --------------------------------------------------------------------------------------------- -->
-    <script src="/js/libs/tablesorter/jquery.tablesorter.js"></script>
-    <script src="/js/libs/spin.min.js"></script>
-    <script src="/js/libs/dropzone.js"></script>
-    <script src="/js/libs/bootstrap.js"></script>
-
-    <script src="/js/libs/bootstrap-editable-1.4.4/bootstrap3-editable/js/bootstrap-editable.js"></script>
-    <script src="/js/libs/summernote/summernote.min.js"></script>
-
-    <script type="application/javascript">
-        var dropzones = new Array();
-
-        $(document).ready(function(){
-//        $('header.main-header').hide();
-//        $('footer.main-footer').hide();
-
-            initSummernote();
-            $('.editor-container').hide();
-
-            initEditableElements();
-
-            $('.page-element').each(function(){
-                content_id = $(this).attr('id');
-
-                $(this).find('.dropzone.content').each(function(){
-                    initDropzoneElement($(this),content_id);
-                });
-            });
-        });
-
-        $(document).on('click','div.summernote-trigger',function(){
-            $(this).hide();
-            $(this).next().show();
-        });
-
-        function updateContent(saveButton,id,url,reload){
-            pk = id;
-            value = $(saveButton).parent().find('.summernote-editor').code();
-
-            $.ajax({
-                url: url,
-                cache: false,
-                type: 'post',
-                data: {
-                    'pk':pk,
-                    'name':'content',
-                    'value':value
-                },
-                spinnerTarget: $(saveButton.parent())
-            }).done(function( html ) {
-                    if(reload){
-                        var ids = pk.split(',');
-                        reloadPageElement(ids[0]);
-                    }
-                });
-        }
-
-        function initSummernote(){
-            $('.summernote-editor').each(function(){
-                initSummernoteElement($(this))
-            });
-        }
-
-        function initSummernoteElement(element){
-            $(element).summernote({
-                height: 400,   //set editable area's height
-                focus: true   //set focus editable area after Initialize summernote
-            });
-        }
-
-        function initEditableElements(){
-            <?php $saveURL = $this->url(array('module'=>'CMS','controller'=>'image','action'=>'save'),null,true); ?>
-
-            // Turn X-editable to inline mode
-            $.fn.editable.defaults.mode = 'inline';
-
-            var url = '<?php echo $this->url(array('module'=>'CMS','controller'=>'content','action'=>'save'),null,true); ?>';
-
-            $('.edit_area').each(function(){
-                initEditable($(this),url,null)
-            });
-        }
-
-        function reloadPageElement(content_id){
-            $content = $('#'+content_id);
-            $parent = $content.parent();
-
-            var url = '<?php echo $this->url(array('module'=>'CMS','controller'=>'preview','action'=>'reload-page-element','parent_id'=>null,'lang_id'=>null),null,true); ?>';
-            url += '/parent_id/'+content_id+'/lang_id/'+'<?php echo $this->language['id'] ?>';
-
-            ajaxCall(url,$('#'+content_id),function(html){
-                if(dropzones[content_id]){
-                    dropzones[content_id].destroy();
-                    delete dropzones[content_id];
-                }
-
-                $parent.html(html);
-                $newContent = $('#'+content_id);
-
-                $newContent.find('img.cms-image').each(function(){
-                    setTimeout(function(){
-                        $img = $(this);
-                        $img.addClass('loading');
-
-                        var timestamp = new Date().getTime();
-                        $img.attr('src',$img.attr('src')+'?'+timestamp);
-
-                        $img.load(function(){
-                            $img.removeClass('loading');
-                        });
-                    },10);
-                });
-
-                initEditableElements();
-
-                if($newContent.find('.dropzone.content').length != 0){
-                    initDropzoneElement($newContent.find('.dropzone.content'),content_id);
-                }
-
-                if($newContent.find('.summernote-editor').length != 0){
-                    initSummernoteElement($newContent.find('.summernote-editor'));
-                    $('.editor-container').hide();
-                }
-            });
-        }
-
-        function hideEditor(content_id){
-            $('#'+content_id).find('.editor-container').hide();
-            $('#'+content_id).find('.summernote-trigger').show();
-        }
-
-        function initDropzoneElement(element,content_id){
-            dropzones[content_id] = initDropzone($(element),function(file,response){
-                if(response['status'] == 1){
-                    url = '<?php echo $this->url(array('module'=>'CMS','controller'=>'content','action'=>'appendimage','id'=>null),null,true); ?>/id/'+response['id'];
-                    ajaxCall(url,$('.dropped-images'),function(html){
-                        newImage = $('.dropped-images.content_'+html['content_id']).append(html['image']);
-                        initEditable(newImage.find('.caption'),null,null);
-
-                        var $modal = $('#'+html['content_id']).find('.modal');
-                        $modal.modal('hide');
-                        $modal.on('hidden.bs.modal', function () {
-                            $modal.data('bs.modal', null);
-                            $modal.remove();
-                            reloadPageElement(html['content_id']);
-                        });
-                    });
-                }else{
-                    $(file.previewTemplate).find('.dz-error-message').html(response[0]);
-                }
-            });
-        }
-    </script>
-<?php } ?>
+<script src="//connect.facebook.net/en_US/all.js"></script>
+<?php echo $this->facebook(FB_APP_ID)->initialize(); ?>
