--- a/application/modules/game/views/scripts/match/skillgame.phtml
+++ b/application/modules/game/views/scripts/match/skillgame.phtml
@@ -17,7 +17,7 @@
                         <div id="keeper" style="position: absolute; top: 75px; left: 50%; margin-left: -30px;"><img src="<?php echo $this->keeper->getPicture(); ?>"></div>
                     </div>
                     <div id="ball" class="ball" style="left:<?php echo $this->ball['x']; ?>; top: <?php echo $this->ball['y']; ?>">
-                        <img src="/css/images/ball.png" width="80" height="80" />
+                        <img src="/styles/images/ball.png" width="80" height="80" />
                     </div>
                     <div id="player" class="player" style="left:<?php echo $this->ball['x']-2; ?>%; top: <?php echo $this->ball['y']-2; ?>%;">
                         <img src="<?php echo $this->player->getPicture(); ?>" />
