--- a/app/include/heading.html
+++ b/app/include/heading.html
@@ -1,5 +1,3 @@
 <div class="page-header">
-    <h1>Titel</h1>
-        <small>Headline</small>
-    </h1>
+    <h1>Titel <small>Headline</small></h1>
 </div>
