--- a/application/modules/game/views/scripts/index/index.phtml
+++ b/application/modules/game/views/scripts/index/index.phtml
@@ -1,4 +1,4 @@
-<div class="jumbotron">
+<div>
     <h1>Willkommen bei <?php echo SITE_NAME; ?></h1>
     <p><?php echo SITE_NAME; ?> ist ein soziales Fussballspiel. Es hat Elemente von klassischen Fussball-Manager Games sowie die soziale Komponente wie man sie von FarmVille kennt. Das Spiel ist gratis und in einer sehr frühen Testphase.</p>
     <p><a class="btn btn-primary btn-large" href="<?php echo $this->loginUrl; ?>">Jetzt spielen!</a></p>
