--- a/application/modules/game/views/scripts/index/challenge.phtml
+++ b/application/modules/game/views/scripts/index/challenge.phtml
@@ -8,15 +8,13 @@
                 <div class="name"><?php echo $f['name']; ?></div>
                 <div class="picture"><img class="thumbnail" src="http://graph.facebook.com/<?php echo $f['fb_uid']; ?>/picture"></div>
                 <div class="description"><?php echo $f['fb_name']; ?></div>
-                <a class="btn btn-default" href="<?php echo $this->url(array('controller'=>'match','action'=>'index','away_team_id'=>$f['id'])); ?>">
+                <a class="btn btn-default" href="<?php echo $this->url(array('controller'=>'match','action'=>'start','away_team_id'=>$f['id'])); ?>">
                     <i class="fa fa-circle-arrow-right"></i> Challenge <?php echo $f['fb_name']; ?>
                 </a>
             </div>
         <?php } ?>
     </div>
 </div>
-<?php }else{ ?>
-    <p>Es scheint als spielen deine Freunde noch nicht <?php echo SITE_NAME; ?>!</p>
 <?php } ?>
 <h4>Warum nicht jemanden einladen?</h4>
 <p><a href="#" class="inviteBtn btn btn-default">Invite your friends!</a></p>
@@ -25,7 +23,18 @@
         FB.ui({
             method: 'feed',
             link: '<?php echo HTTP_ROOT ?>/game',
-            caption: 'Ein lustiges Facebook Fussball-Game - spiele mit deinen Freunden. Voll beta.'
+            caption: 'Ein lustiges Facebook Fussball-Game, deine Mannschaft sind deine Freunde. Voll beta. Jetzt testen. Danke!'
         }, function(response){});
     })
 </script>
+<p>Folgende Spiele sind noch offen:</p>
+<?php foreach($this->open as $m){ ?>
+    <div class="team clearfix" data-id="<?php echo $m['id']; ?>">
+        <div class="name"><?php echo $m['name']; ?></div>
+        <div class="picture"><img class="thumbnail" src="http://graph.facebook.com/<?php echo $m['fb_uid']; ?>/picture"></div>
+        <div class="description"><?php echo $m['fb_name']; ?></div>
+        <a class="btn btn-default" href="<?php echo $this->url(array('controller'=>'match','action'=>'view','match_id'=>$m['match_id'])); ?>">
+            <i class="fa fa-circle-arrow-right"></i> Resume this match!
+        </a>
+    </div>
+<?php } ?>
