--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -124,3 +124,23 @@ a:hover {
 .navbar{
   background-color: $link_colour;
 }
+
+
+.custom-combobox {
+  position: relative;
+  display: inline-block;
+}
+.custom-combobox-toggle {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  margin-left: -1px;
+  padding: 0;
+  /* support: IE7 */
+  *height: 1.7em;
+  *top: 0.1em;
+}
+.custom-combobox-input {
+  margin: 0;
+  padding: 0.3em;
+}
