--- a/application/modules/game/views/scripts/team/index.phtml
+++ b/application/modules/game/views/scripts/team/index.phtml
@@ -1,8 +1,8 @@
 <div class="row">
     <div class="col-lg-4">
-        <div class="panel panel-primary">
+        <div class="panel panel-default">
             <div class="panel-heading">
-                <h3 class="panel-title">Add Player</h3>
+                <h3 class="panel-title"><i class="fa fa-add"></i> Add Player</h3>
             </div>
             <div class="panel-body">
                 <?php if($this->friend){ ?>
@@ -15,10 +15,13 @@
                         <input type="submit" class="btn btn-success" value="<?php echo $this->friend['name']; ?> ins Kader!" />
                     </form>
                 <?php }else{ ?>
-                    <form method="post">
-                        <input type="text" autocomplete="off" name="friend_name" id="newPlayer">
-                        <input type="hidden" id="friend_id" name="friend_id">
-                        <input class="btn btn-primary" type="submit" value="Medizinische Checks">
+                    <form method="post" id="newPlayer">
+                        <select name="friend_id" class="combobox">
+                            <?php foreach($this->friends as $f){
+                                ?><option value="<?php echo $f['id']; ?>"><?php echo $f['name']; ?></option>
+                            <?php } ?>
+                        </select>
+                        <button class="btn btn-primary" type="submit">Medizinische Checks</button>
                     </form>
                 <?php } ?>
             </div>
@@ -38,17 +41,6 @@
 
 <script>
 
-    $('#newPlayer').typeahead({
-        name: 'playerSelect',
-        prefetch: '<?php echo $this->url(array('controller'=>'player','action'=>'load-friends')); ?>',
-    }).on('typeahead:selected', function(e,dataset) {
-
-        $('#friend_id').attr('value',dataset.id);
-
-        var $typeahead = $(this),
-            $form = $typeahead.parents('form').first();
-
-        $form.submit();
-    });
+    $('.combobox').combobox();
 
 </script>
